# learning-world-model-learning

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
1.video-tokenizer/: .visualize_pipeline.py  README.md  config.py  data_utils.py  pyproject.toml  train.py  validate.py
1.video-tokenizer/checkpoints/: checkpoint_epoch2.pt  checkpoint_epoch3.pt  final_model.pt
1.video-tokenizer/data/: wget-log
1.video-tokenizer/models/: __init__.py  positional_encoding.py  st_transformer.py
1.video-tokenizer/video_tokenizer/: __init__.py  data_utils.py
1.video-tokenizer/video_tokenizer/models/: __init__.py  fsq.py  patch_embed.py  st_transformer.py  video_tokenizer.py
2.inverse-dynamics/: README.md  config.py  pyproject.toml  train.py  validate.py
2.inverse-dynamics/inverse_dynamics/: __init__.py
2.inverse-dynamics/inverse_dynamics/models/: __init__.py  latent_action_model.py
