[project]
name = "inverse-dynamics"
version = "0.1.0"
description = "Latent action model using inverse dynamics"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "video-tokenizer",
]

[tool.uv.sources]
video-tokenizer = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inverse_dynamics"]
